[package]
name = "pretender"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
rand = "0.9.2"
serde = "1.0.228"
tokio = {version = "1.49.0", features = ["full"] }
contracts = { path = "../contracts" }
env_logger = "0.11.8"
log = "0.4.29"
wincode = { version = "0.2.5", features = ["std"] }
thiserror = "2.0.17"
